--- a/views/mainPage.html
+++ b/views/mainPage.html
@@ -3,7 +3,7 @@
     <meta charset="utf-8">
     <title>Journey To the West Relationship Map</title>
 </head>
-<link href="CSS/bootstrap.min.css" rel="stylesheet">
+<link href="../public/stylesheets/bootstrap.min.css" rel="stylesheet">
 <style>
     .nodetext {
         font-size: 12px;
@@ -84,8 +84,8 @@
     </div>
 </div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-<script src="JS/bootstrap.min.js"></script>
-<script src="JS/d3.min.js" charset="utf-8"></script>
-<script src="JS/main.js"></script>
+<script src="../public/javascripts/bootstrap.min.js"></script>
+<script src="../public/javascripts/d3.min.js" charset="utf-8"></script>
+<script src="../public/javascripts/main.js"></script>
 </body>
 </html>
