--- a/views/xiyouji.html
+++ b/views/xiyouji.html
@@ -1,4 +1,4 @@
-<!--Created by Administrator on 2016/4/29.
+<!--Created by Kevin on 2016/4/29.
 --><html><head><meta charset="utf-8"/><title>Journey To the West Relationship Map</title></head><link href="/stylesheets/bootstrap.min.css" rel="stylesheet"/><style>.nodetext {
     font-size: 12px;
     font-family: SimSun;
@@ -10,4 +10,67 @@
     font-family: SimSun;
     fill: #0000FF;
     fill-opacity: 0.0;
-}</style><body><div id="modal" role="dialog" class="modal fade"><div class="modal-dialog modal-lg"><div class="modal-content"><div class="modal-header"><button type="button" data-dismiss="modal" class="close">&times;</button><h4 class="modal-title"></h4></div><div class="modal-body"><div id="accordion" role="tablist" aria-multiselectable="true" class="panel-group"><div class="panel panel-default"><div id="headingOne" role="tab" class="panel-heading"><h4 class="panel-title"><a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">Who is he/she ?</a></h4></div><div id="collapseOne" role="tabpanel" aria-labelledby="headingOne" class="panel-collapse collapse in"><div class="panel-body"></div></div></div><div class="panel panel-default"><div id="headingTwo" role="tab" class="panel-heading"><h4 class="panel-title"><a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo" class="collapsed">Why is he/she important (in one sentence)?</a></h4></div><div id="collapseTwo" role="tabpanel" aria-labelledby="headingTwo" class="panel-collapse collapse"><div class="panel-body"></div></div></div></div></div><div class="modal-footer"><button type="button" data-dismiss="modal" class="btn btn-default">Close</button></div></div></div></div><script type="text/javascript">var json = ;</script><script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script><script src="/javascripts/bootstrap.min.js"></script><script src="/javascripts/d3.min.js" charset="utf-8"></script><script src="/javascripts/main.js"></script></body></html>
+}</style>
+<body>
+<div id="modal" role="dialog" class="modal fade">
+    <div class="modal-dialog modal-lg">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" data-dismiss="modal" class="close">&times;</button>
+                <h4 class="modal-title"></h4></div>
+            <div class="modal-body">
+                <div id="accordion" role="tablist" aria-multiselectable="true" class="panel-group">
+                    <div class="panel panel-default">
+                        <div id="headingOne" role="tab" class="panel-heading"><h4 class="panel-title"><a role="button"
+                                                                                                         data-toggle="collapse"
+                                                                                                         data-parent="#accordion"
+                                                                                                         href="#collapseOne"
+                                                                                                         aria-expanded="true"
+                                                                                                         aria-controls="collapseOne">Who
+                            is he/she ?</a></h4></div>
+                        <div id="collapseOne" role="tabpanel" aria-labelledby="headingOne"
+                             class="panel-collapse collapse in">
+                            <div class="panel-body"></div>
+                        </div>
+                    </div>
+                    <div class="panel panel-default">
+                        <div id="headingTwo" role="tab" class="panel-heading"><h4 class="panel-title"><a role="button"
+                                                                                                         data-toggle="collapse"
+                                                                                                         data-parent="#accordion"
+                                                                                                         href="#collapseTwo"
+                                                                                                         aria-expanded="false"
+                                                                                                         aria-controls="collapseTwo"
+                                                                                                         class="collapsed">Why
+                            is he/she important (in one sentence)?</a></h4></div>
+                        <div id="collapseTwo" role="tabpanel" aria-labelledby="headingTwo"
+                             class="panel-collapse collapse">
+                            <div class="panel-body"></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="modal-footer">
+                <button type="button" data-dismiss="modal" class="btn btn-default">Close</button>
+            </div>
+        </div>
+    </div>
+</div>
+<nav class="navbar navbar-inverse">
+    <div class="container-fluid">
+        <div class="navbar-header"><a href="#" class="navbar-brand">ProjectJTW</a></div>
+        <ul class="nav navbar-nav">
+            <li><a href="/">Home</a></li>
+            <li class="active"><a href="#">Xiyouji Relation</a></li>
+            <li><a href="/about">About</a></li>
+        </ul>
+    </div>
+</nav>
+<div class="col-md-8"></div>
+<div class="col-md-4"><p>hello world</p></div>
+<script type="text/javascript">var json =;</script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+<script src="/javascripts/bootstrap.min.js"></script>
+<script src="/javascripts/d3.min.js" charset="utf-8"></script>
+<script src="/javascripts/main.js"></script>
+</body>
+</html>
