--- a/views/index.html
+++ b/views/index.html
@@ -1,1 +1,20 @@
-<!DOCTYPE html><html><head><title></title><link rel="stylesheet" href="/stylesheets/style.css"></head><body><h1></h1><p>Welcome to </p></body></html>
+<!DOCTYPE html>
+<html>
+<head><title></title>
+    <link href="/stylesheets/bootstrap.min.css" rel="stylesheet">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <script src="/javascripts/bootstrap.min.js"></script>
+</head>
+<body>
+<nav class="navbar navbar-inverse">
+    <div class="container-fluid">
+        <div class="navbar-header"><a href="#" class="navbar-brand">ProjectJTW</a></div>
+        <ul class="nav navbar-nav">
+            <li class="active"><a href="#">Home</a></li>
+            <li><a href="/xiyouji">Xiyouji Relation</a></li>
+            <li><a href="/about">About</a></li>
+        </ul>
+    </div>
+</nav>
+</body>
+</html>
