--- a/views/layout.jade
+++ b/views/layout.jade
@@ -2,6 +2,10 @@ doctype html
 html
     head
         title= title
-        link(rel='stylesheet', href='/stylesheets/style.css')
+        link(href='/stylesheets/bootstrap.min.css', rel='stylesheet')
+        script(src='https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js')
+        script(src='/javascripts/bootstrap.min.js')
+        block extraHeader
     body
         block content
+
