--- a/views/about.html
+++ b/views/about.html
@@ -15,60 +15,114 @@
     #changeLog {
         list-style-type: none;
     }
-    </style>
-</head>
-<body>
-<nav class="navbar navbar-inverse">
-    <div class="container-fluid">
-        <div class="navbar-header"><a href="#" class="navbar-brand">ProjectJTW</a></div>
-        <ul class="nav navbar-nav">
-            <li><a href="/">Home</a></li>
-            <li><a href="/xiyouji">Xiyouji Relation</a></li>
-            <li class="active"><a href="/about">About</a></li>
-        </ul>
-    </div>
-</nav>
-<div class="container">
-    <div class="row">
-        <div class="col-lg-12"><h1 class="page-header">About me</h1>
-            <p>I am a to-be alumni of UW-Madison, graduated with a Bachelor of Science in Computer Science, I am
-                actively seeking a job in Java development.</p>You can Contact me at sjiang42#wisc.edu
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-lg-12"><h2 class="page-header">About this project</h2>
-            <p>This project serves as the final project for E Asian 371 Journey to the West taught by Professor Rania
-                Huntington</p>The intended purpose for this site is to teach or help students familiarize themselves
-            with the Journey to the West.
-            This also serves as a side project where I try the technologies that I am interested in.
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-lg-12"><h3 class="page-header">Technologies used</h3>
-            <ul id="techUsed">
-                <li><img src="images/heroku.png"></li>
-                <li><img src="images/nodejs-128.png"></li>
-                <li><img src="images/psql.PNG"></li>
-                <li><img src="images/d3_logo.png"></li>
-                <li><img src="images/bootstrape.png"></li>
+
+    .sources {
+        list-style-type: none;
+    }</style>
+    <nav class="navbar navbar-inverse">
+        <div class="container-fluid">
+            <div class="navbar-header"><a href="#" class="navbar-brand">ProjectJTW</a></div>
+            <ul class="nav navbar-nav">
+                <li><a href="/">Home</a></li>
+                <li><a href="/xiyouji">Xiyouji Relation</a></li>
+                <li class="active"><a href="/about">About</a></li>
             </ul>
         </div>
-    </div>
-    <div class="row">
-        <div class="col-lg-12"><h4 class="page-header">Changelog</h4>
-            <ul id="changeLog">
-                <li>05-07-2016 Website with basic functionality is up and running. The only feature is relationship
-                    mapping for now.
-                </li>
-            </ul>
-        </div>
-    </div>
-    <hr>
-    <footer>
+    </nav>
+    <div class="container">
         <div class="row">
-            <div class="col-lg-12"><p>Copyright &copy; KevinSJ 2016</p></div>
+            <div class="col-lg-12"><h1 class="page-header">About me</h1>
+                <p>I am a to-be alumni of UW-Madison, graduated with a Bachelor of Science in Computer Science, I am
+                    actively seeking a job in Java development.</p>You can Contact me at sjiang42#wisc.edu
+            </div>
         </div>
-    </footer>
-</div>
-</body>
+        <div class="row">
+            <div class="col-lg-12"><h2 class="page-header">About this project</h2>
+                <p>This project serves as the final project for E Asian 371 Journey to the West taught by Professor
+                    Rania Huntington</p>The intended purpose for this site is to teach or help students familiarize
+                themselves with the Journey to the West.
+                This also serves as a side project where I try the technologies that I am interested in.
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-lg-12"><h3 class="page-header">Technologies used</h3>
+                <ul id="techUsed">
+                    <li><img src="images/heroku.png"></li>
+                    <li><img src="images/nodejs-128.png"></li>
+                    <li><img src="images/psql.PNG"></li>
+                    <li><img src="images/d3_logo.png"></li>
+                    <li><img src="images/bootstrape.png"></li>
+                    <li><img src="images/jade.png"></li>
+                </ul>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-lg-12"><h4 class="page-header">Sources</h4>
+                <p>I didn't own any of the images used in this project, all the images were found on the internet.
+                    Sources are listed below:</p>
+                <div class="col-lg-6">
+                    <ul class="sources">
+                        <li><b>SunWuKong</b>: http://img.ivsky.com/img/tupian/pre/201112/14/monkey_king-017.jpg</li>
+                        <li><b>Pigsy</b>: http://pic.qiantucdn.com/58pic/17/93/74/44B58PICinp_1024.jpg</li>
+                        <li><b>Sandy</b>: http://jiangsu.china.com.cn/uploadfile/2015/1123/1448274506953362.jpg</li>
+                        <li><b>Tripitaka</b>: http://ww4.sinaimg.cn/bmiddle/7e8b4ac8tw1et3e21c9k8j20e60e5gmk.jpg</li>
+                        <li><b>White Horse</b>:
+                            http://zellox.com/wp-content/uploads/2016/05/beautiful-white-horse-running-1-1024x640.jpeg
+                        </li>
+                        <li><b>White bone demon</b>: http://chinesemov.com/images/character/White-Bone-Demon-1.jpg</li>
+                        <li><b>Yellow rob demon</b>:
+                            http://40.media.tumblr.com/2a8ac4dfb187c79fcdb18ea06af0fde3/tumblr_mw2q3nUkpQ1s3gl76o1_1280.jpg
+                        </li>
+                        <li><b>Bull demon king</b>:
+                            http://2.bp.blogspot.com/-4Tx8G8kAzWE/VjafdtNusgI/AAAAAAAACSQ/S0xRoolYOd4/s1600/419473_601587876496_902992110_n.jpg
+                        </li>
+                        <li><b>Red boy</b>: http://p2.pstatp.com/large/11700029fecbbe003d5</li>
+                    </ul>
+                </div>
+                <div class="col-lg-6">
+                    <ul class="sources">
+                        <li><b>Guanyin</b>:
+                            http://attach2.scimg.cn/month_1301/31/558b761f9cf3a046d8001b39d3d9f6b4_orig.jpg
+                        </li>
+                        <li><b>Jade emperor</b>: http://p3.pstatp.com/large/21500040d054c47a77c</li>
+                        <li><b>Patriarch</b>: http://www.wanhuajing.com/pic/1604/2515/2825783/1_525_403.jpg</li>
+                        <li><b>Tathagata</b>:
+                            http://easyread.ph.126.net/d_t1hqCNQa_9rXDviGX6aA==/7916801478850876537.jpg
+                        </li>
+                        <li><b>Princess Iron Fan</b>:
+                            http://orig01.deviantart.net/fe1b/f/2011/211/9/a/9a40a9e8225b493d1eec7bf9b4ea1abe-d426vpr.png
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <ul class="sources">
+                <li><b>Text for "Who is she/he"</b>: Mostly from Wikipedia and glossary constructed collectively with E
+                    Asian 371 classmates
+                </li>
+                <li><b>Text for "Why is he/she important (in one sentence) ?"</b>: Mostly written on my own as a
+                    reflection of what I had learnt in the course
+                </li>
+                <li><b>Code for highlighting nodes</b>:
+                    http://www.coppelia.io/2014/07/an-a-to-z-of-extra-features-for-the-d3-force-layout
+                </li>
+                <p>The code is open sourced and available at <a>https://github.com/KevinSJ/ProjectJTY</a></p></ul>
+        </div>
+        <div class="row">
+            <div class="col-lg-12"><h4 class="page-header">Changelog</h4>
+                <ul id="changeLog">
+                    <li>05-07-2016 Website with basic functionality is up and running. The only feature is relationship
+                        mapping for now.
+                    </li>
+                </ul>
+            </div>
+        </div>
+        <hr>
+        <footer>
+            <div class="row">
+                <div class="col-lg-12"><p>Copyright &copy; KevinSJ 2016</p></div>
+            </div>
+        </footer>
+    </div>
+</head>
+<body></body>
 </html>
