--- a/views/about.jade
+++ b/views/about.jade
@@ -16,7 +16,10 @@ block extraHeader
             list-style-type: none;
         }
 
-block content
+        .sources {
+            list-style-type: none;
+        }
+    block content
     nav.navbar.navbar-inverse
         .container-fluid
             .navbar-header
@@ -54,8 +57,36 @@ block content
                         img(src = 'images/d3_logo.png')
                     li
                         img(src = 'images/bootstrape.png')
+                    li
+                        img(src = 'images/jade.png')
 
-
+        .row
+            .col-lg-12
+                h4.page-header Sources
+                p I didn't own any of the images used in this project, all the images were found on the internet. Sources are listed below:
+                .col-lg-6
+                    ul.sources
+                        li <b>SunWuKong</b>: http://img.ivsky.com/img/tupian/pre/201112/14/monkey_king-017.jpg
+                        li <b>Pigsy</b>: http://pic.qiantucdn.com/58pic/17/93/74/44B58PICinp_1024.jpg
+                        li <b>Sandy</b>: http://jiangsu.china.com.cn/uploadfile/2015/1123/1448274506953362.jpg
+                        li <b>Tripitaka</b>: http://ww4.sinaimg.cn/bmiddle/7e8b4ac8tw1et3e21c9k8j20e60e5gmk.jpg
+                        li <b>White Horse</b>: http://zellox.com/wp-content/uploads/2016/05/beautiful-white-horse-running-1-1024x640.jpeg
+                        li <b>White bone demon</b>: http://chinesemov.com/images/character/White-Bone-Demon-1.jpg
+                        li <b>Yellow rob demon</b>: http://40.media.tumblr.com/2a8ac4dfb187c79fcdb18ea06af0fde3/tumblr_mw2q3nUkpQ1s3gl76o1_1280.jpg
+                        li <b>Bull demon king</b>: http://2.bp.blogspot.com/-4Tx8G8kAzWE/VjafdtNusgI/AAAAAAAACSQ/S0xRoolYOd4/s1600/419473_601587876496_902992110_n.jpg
+                        li <b>Red boy</b>: http://p2.pstatp.com/large/11700029fecbbe003d5
+                .col-lg-6
+                    ul.sources
+                        li <b>Guanyin</b>: http://attach2.scimg.cn/month_1301/31/558b761f9cf3a046d8001b39d3d9f6b4_orig.jpg
+                        li <b>Jade emperor</b>: http://p3.pstatp.com/large/21500040d054c47a77c
+                        li <b>Patriarch</b>: http://www.wanhuajing.com/pic/1604/2515/2825783/1_525_403.jpg
+                        li <b>Tathagata</b>: http://easyread.ph.126.net/d_t1hqCNQa_9rXDviGX6aA==/7916801478850876537.jpg
+                        li <b>Princess Iron Fan</b>: http://orig01.deviantart.net/fe1b/f/2011/211/9/a/9a40a9e8225b493d1eec7bf9b4ea1abe-d426vpr.png
+            ul.sources
+                li <b>Text for "Who is she/he"</b>: Mostly from Wikipedia and glossary constructed collectively with E Asian 371 classmates
+                li <b>Text for "Why is he/she important (in one sentence) ?"</b>: Mostly written on my own as a reflection of what I had learnt in the course
+                li <b>Code for highlighting nodes</b>: http://www.coppelia.io/2014/07/an-a-to-z-of-extra-features-for-the-d3-force-layout
+                p The code is open sourced and available at <a>https://github.com/KevinSJ/ProjectJTY</a>
         .row
             .col-lg-12
                 h4.page-header Changelog
