--- a/views/index.html
+++ b/views/index.html
@@ -16,5 +16,12 @@
         </ul>
     </div>
 </nav>
+<div class="row"><h1>&nbsp WORK IN PROGRESS... COMING SOON...</h1></div>
+<hr>
+<footer>
+    <div class="row">
+        <div class="col-lg-12"><p>Copyright &copy; KevinSJ 2016</p></div>
+    </div>
+</footer>
 </body>
 </html>
