--- a/views/index.jade
+++ b/views/index.jade
@@ -1,7 +1,6 @@
 extends layout
 
 block content
-
     nav.navbar.navbar-inverse
         .container-fluid
             .navbar-header
@@ -13,3 +12,11 @@ block content
                     a(href='/xiyouji') Xiyouji Relation
                 li
                     a(href='/about') About
+
+    .row
+        h1 &nbsp WORK IN PROGRESS... COMING SOON...
+    hr
+    footer
+        .row
+            .col-lg-12
+                p Copyright &copy; KevinSJ 2016
