--- a/views/xiyouji.html
+++ b/views/xiyouji.html
@@ -12,49 +12,6 @@
     fill-opacity: 0.0;
 }</style>
 <body>
-<div id="modal" role="dialog" class="modal fade">
-    <div class="modal-dialog modal-lg">
-        <div class="modal-content">
-            <div class="modal-header">
-                <button type="button" data-dismiss="modal" class="close">&times;</button>
-                <h4 class="modal-title"></h4></div>
-            <div class="modal-body">
-                <div id="accordion" role="tablist" aria-multiselectable="true" class="panel-group">
-                    <div class="panel panel-default">
-                        <div id="headingOne" role="tab" class="panel-heading"><h4 class="panel-title"><a role="button"
-                                                                                                         data-toggle="collapse"
-                                                                                                         data-parent="#accordion"
-                                                                                                         href="#collapseOne"
-                                                                                                         aria-expanded="true"
-                                                                                                         aria-controls="collapseOne">Who
-                            is he/she ?</a></h4></div>
-                        <div id="collapseOne" role="tabpanel" aria-labelledby="headingOne"
-                             class="panel-collapse collapse in">
-                            <div class="panel-body"></div>
-                        </div>
-                    </div>
-                    <div class="panel panel-default">
-                        <div id="headingTwo" role="tab" class="panel-heading"><h4 class="panel-title"><a role="button"
-                                                                                                         data-toggle="collapse"
-                                                                                                         data-parent="#accordion"
-                                                                                                         href="#collapseTwo"
-                                                                                                         aria-expanded="false"
-                                                                                                         aria-controls="collapseTwo"
-                                                                                                         class="collapsed">Why
-                            is he/she important (in one sentence)?</a></h4></div>
-                        <div id="collapseTwo" role="tabpanel" aria-labelledby="headingTwo"
-                             class="panel-collapse collapse">
-                            <div class="panel-body"></div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="modal-footer">
-                <button type="button" data-dismiss="modal" class="btn btn-default">Close</button>
-            </div>
-        </div>
-    </div>
-</div>
 <nav class="navbar navbar-inverse">
     <div class="container-fluid">
         <div class="navbar-header"><a href="#" class="navbar-brand">ProjectJTW</a></div>
@@ -66,9 +23,45 @@
     </div>
 </nav>
 <div class="col-md-8"></div>
-<div class="col-md-4"><p>hello world</p></div>
+<div class="col-md-4">
+    <div class="row">
+        <div class="col-lg-12"><h2>Instruction: Hover over the character picture to see character specific relations.
+            Double click on the images to see character related information magically appears below!</h2></div>
+    </div>
+    <div id="accordion" role="tablist" aria-multiselectable="true" class="panel-group">
+        <div class="panel panel-default">
+            <div id="headingOne" role="tab" class="panel-heading">
+                <h4 class="panel-title"><a role="button" data-toggle="collapse" data-parent="#accordion"
+                                           href="#collapseOne" aria-expanded="true" aria-controls="collapseOne"><h3>Who
+                    is he/she ?</h3></a></h4>
+            </div>
+            <div id="collapseOne" role="tabpanel" aria-labelledby="headingOne" class="panel-collapse collapse in">
+                <div class="panel-body"></div>
+            </div>
+        </div>
+        <div class="panel panel-default">
+            <div id="headingTwo" role="tab" class="panel-heading">
+                <h4 class="panel-title"><a role="button" data-toggle="collapse" data-parent="#accordion"
+                                           href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo"
+                                           class="collapsed"><h3>Why is he/she important (in one sentence)?</h3></a>
+                </h4>
+            </div>
+            <div id="collapseTwo" role="tabpanel" aria-labelledby="headingTwo" class="panel-collapse collapse">
+                <div class="panel-body"></div>
+            </div>
+        </div>
+    </div>
+    <hr/>
+    <footer>
+        <div class="row">
+            <div class="col-lg-12"><p>Copyright &copy; KevinSJ 2016</p></div>
+        </div>
+    </footer>
+</div>
 <script type="text/javascript">var json =;</script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+<script type="text/javascript" src="http://code.jquery.com/ui/1.11.0/jquery-ui.min.js"></script>
+<script type="text/javascript" src="http://code.jquery.com/ui/1.11.0/themes/smoothness/jquery-ui.css"></script>
 <script src="/javascripts/bootstrap.min.js"></script>
 <script src="/javascripts/d3.min.js" charset="utf-8"></script>
 <script src="/javascripts/main.js"></script>
