--- a/views/about.html
+++ b/views/about.html
@@ -53,6 +53,7 @@
                     <li><img src="images/d3_logo.png"></li>
                     <li><img src="images/bootstrape.png"></li>
                     <li><img src="images/jade.png"></li>
+                    <li><img src="images/express.png"></li>
                 </ul>
             </div>
         </div>
