--- a/views/about.jade
+++ b/views/about.jade
@@ -59,6 +59,8 @@ block extraHeader
                         img(src = 'images/bootstrape.png')
                     li
                         img(src = 'images/jade.png')
+                    li
+                        img(src = 'images/express.png')
 
         .row
             .col-lg-12
