--- a/views/xiyouji.html
+++ b/views/xiyouji.html
@@ -1,5 +1,12 @@
 <!--Created by Kevin on 2016/4/29.
---><html><head><meta charset="utf-8"/><title>Journey To the West Relationship Map</title></head><link href="/stylesheets/bootstrap.min.css" rel="stylesheet"/><style>.nodetext {
+-->
+<html>
+<head>
+    <meta charset="utf-8"/>
+    <meta http-equiv="CACHE-CONTROL" content="NO-CACHE"/>
+    <title>Journey To the West Relationship Map</title></head>
+<link href="/stylesheets/bootstrap.min.css" rel="stylesheet"/>
+<style>.nodetext {
     font-size: 12px;
     font-family: SimSun;
     fill: #000000;
