--- a/views/xiyouji.jade
+++ b/views/xiyouji.jade
@@ -4,6 +4,7 @@
 html
     head
         meta(charset='utf-8')
+        meta(http-equiv='CACHE-CONTROL', content='NO-CACHE')
         title Journey To the West Relationship Map
     link(href='/stylesheets/bootstrap.min.css', rel='stylesheet')
     style.
